--- a/src/BlazorRoslib/RosToolbox/Shared/NavMenu.razor
+++ b/src/BlazorRoslib/RosToolbox/Shared/NavMenu.razor
@@ -5,6 +5,8 @@
                 Icon="@Icons.Filled.AutoAwesomeMosaic" IconColor="Color.Inherit">Dashboard</MudNavLink>
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/liveview") Match="NavLinkMatch.Prefix"
                 Icon="@Icons.Filled.Image" IconColor="Color.Inherit">Live</MudNavLink>
+    <MudNavLink Href=@($"{GitHubPages.BaseUri}/live3dview") Match="NavLinkMatch.Prefix"
+                Icon="@Icons.Filled._3dRotation" IconColor="Color.Inherit">3D</MudNavLink>
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/alltopics") Match="NavLinkMatch.Prefix"
                 Icon="@Icons.Filled.DataObject" IconColor="Color.Inherit">Topics</MudNavLink>
     <MudNavLink Href="@($"{GitHubPages.BaseUri}/allservices")" Match="NavLinkMatch.Prefix"
