--- a/src/BlazorRoslib/RosToolbox/Pages/AllParamsPage.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/AllParamsPage.razor
@@ -81,6 +81,6 @@
 
     private void GoToParam(string param)
     {
-        NavManager.NavigateTo($"/rosparam?ParamName={param}");
+        NavManager.NavigateTo($"rosparam?ParamName={param}");
     }
 }
