--- a/src/BlazorRoslib/RosToolbox/Pages/AllServicesPage.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/AllServicesPage.razor
@@ -94,6 +94,6 @@
 
     private void GoToService(IService service)
     {
-        NavManager.NavigateTo($"/rosservice?ServiceName={service.Name}");
+        NavManager.NavigateTo($"rosservice?ServiceName={service.Name}");
     }
 }
