--- a/src/BlazorRoslib/RosToolbox/Pages/AllTopicsPage.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/AllTopicsPage.razor
@@ -81,6 +81,6 @@
 
     private void GoToTopic(Topic topic)
     {
-        NavManager.NavigateTo($"/rostopic?TopicName={topic.Name}&MsgType={topic.MessageType}");
+        NavManager.NavigateTo($"rostopic?TopicName={topic.Name}&MsgType={topic.MessageType}");
     }
 }
