--- a/src/BlazorRoslib/RosToolbox/Shared/MainLayout.razor
+++ b/src/BlazorRoslib/RosToolbox/Shared/MainLayout.razor
@@ -150,6 +150,6 @@
 
     private void GoToRosSettings()
     {
-        NavManager.NavigateTo("/rossettings");
+        NavManager.NavigateTo("rossettings");
     }
     }
