--- a/src/BlazorRoslib/RosToolbox/Pages/AllParamsPage.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/AllParamsPage.razor
@@ -63,6 +63,7 @@
     {
         base.OnInitialized();
         UpdateParams();
+        RosInterop.OnStateHasChanged += (_) => UpdateParams();
     }
 
     private void UpdateParams()
