--- a/src/BlazorRoslib/RosToolbox/Pages/AllServicesPage.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/AllServicesPage.razor
@@ -66,6 +66,7 @@
     {
         base.OnInitialized();
         UpdateServices();
+        RosInterop.OnStateHasChanged += (_) => UpdateServices();
     }
 
     private void UpdateServices()
