--- a/src/BlazorRoslib/RosToolbox/Shared/NavMenu.razor
+++ b/src/BlazorRoslib/RosToolbox/Shared/NavMenu.razor
@@ -2,17 +2,17 @@
 
 <MudNavMenu Color="Color.Secondary">
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/") Match="NavLinkMatch.All"
-                Icon="@Icons.Filled.AutoAwesomeMosaic" IconColor="Color.Inherit">Dashboard</MudNavLink>
+                Icon="@Icons.Material.Filled.AutoAwesomeMosaic" IconColor="Color.Inherit">Dashboard</MudNavLink>
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/liveview") Match="NavLinkMatch.Prefix"
-                Icon="@Icons.Filled.Image" IconColor="Color.Inherit">Live</MudNavLink>
+                Icon="@Icons.Material.Filled.Image" IconColor="Color.Inherit">Live</MudNavLink>
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/live3dview") Match="NavLinkMatch.Prefix"
-                Icon="@Icons.Filled._3dRotation" IconColor="Color.Inherit">3D</MudNavLink>
+                Icon="@Icons.Material.Filled._3dRotation" IconColor="Color.Inherit">3D</MudNavLink>
     <MudNavLink Href=@($"{GitHubPages.BaseUri}/alltopics") Match="NavLinkMatch.Prefix"
-                Icon="@Icons.Filled.DataObject" IconColor="Color.Inherit">Topics</MudNavLink>
+                Icon="@Icons.Material.Filled.DataObject" IconColor="Color.Inherit">Topics</MudNavLink>
     <MudNavLink Href="@($"{GitHubPages.BaseUri}/allservices")" Match="NavLinkMatch.Prefix"
-                Icon="@Icons.Filled.CompareArrows" IconColor="Color.Inherit">Services</MudNavLink>
+                Icon="@Icons.Material.Filled.CompareArrows" IconColor="Color.Inherit">Services</MudNavLink>
     <MudNavLink Href="@($"{GitHubPages.BaseUri}/allparams")" Match="NavLinkMatch.Prefix"
-                Icon="@Icons.Filled.DisplaySettings" IconColor="Color.Inherit">Params</MudNavLink>
+                Icon="@Icons.Material.Filled.DisplaySettings" IconColor="Color.Inherit">Params</MudNavLink>
 </MudNavMenu>
 
 @code {
