Init Card and filter topics

--- a/src/BlazorRoslib/RosToolbox/Pages/Index.razor
+++ b/src/BlazorRoslib/RosToolbox/Pages/Index.razor
@@ -12,6 +12,9 @@
         <MudItem Style="display:flex;">
             <RosToolbox.Components.DashboardCards.RosbagRecordingCard />
         </MudItem>
+        <MudItem Style="display:flex;">
+            <RosToolbox.Components.DashboardCards.TopicHealthCard />
+        </MudItem>
     </MudGrid>
 </MudContainer>
 
