--- a/src/BlazorRoslib/RosToolbox/wwwroot/css/app.css
+++ b/src/BlazorRoslib/RosToolbox/wwwroot/css/app.css
@@ -63,3 +63,6 @@ a, .btn-link {
         content: "An error has occurred."
     }
 
+.mud-nav-link:hover {
+    color: var(--mud-palette-secondary)
+}
